--- a/plugins/fiddy/site/controllers/addresses/update.htm
+++ b/plugins/fiddy/site/controllers/addresses/update.htm
@@ -1,6 +1,6 @@
 <?php Block::put('breadcrumb') ?>
     <ul>
-        <li><a href="<?= Backend::url('fiddy/site/restaurants') ?>">Restaurants</a></li>
+        <li><a href="<?= Backend::url('fiddy/site/addresses') ?>">Addresses</a></li>
         <li><?= e($this->pageTitle) ?></li>
     </ul>
 <?php Block::endPut() ?>
@@ -8,6 +8,7 @@
 <?php if (!$this->fatalError): ?>
 
     <?= Form::open(['class' => 'layout']) ?>
+
         <div class="layout-row">
             <?= $this->formRender() ?>
         </div>
@@ -17,30 +18,39 @@
                 <button
                     type="submit"
                     data-request="onSave"
+                    data-request-data="redirect:0"
                     data-hotkey="ctrl+s, cmd+s"
-                    data-load-indicator="Creating Restaurant..."
+                    data-load-indicator="Saving Address..."
                     class="btn btn-primary">
-                    Create
+                    <u>S</u>ave
                 </button>
                 <button
                     type="button"
                     data-request="onSave"
                     data-request-data="close:1"
                     data-hotkey="ctrl+enter, cmd+enter"
-                    data-load-indicator="Creating Restaurant..."
+                    data-load-indicator="Saving Address..."
                     class="btn btn-default">
-                    Create and Close
+                    Save and Close
+                </button>
+                <button
+                    type="button"
+                    class="oc-icon-trash-o btn-icon danger pull-right"
+                    data-request="onDelete"
+                    data-load-indicator="Deleting Address..."
+                    data-request-confirm="Do you really want to delete this address?">
                 </button>
                 <span class="btn-text">
-                    or <a href="<?= Backend::url('fiddy/site/restaurants') ?>">Cancel</a>
+                    or <a href="<?= Backend::url('fiddy/site/addresses') ?>">Cancel</a>
                 </span>
             </div>
         </div>
+
     <?= Form::close() ?>
 
 <?php else: ?>
 
     <p class="flash-message static error"><?= e($this->fatalError) ?></p>
-    <p><a href="<?= Backend::url('fiddy/site/restaurants') ?>" class="btn btn-default">Return to restaurants list</a></p>
+    <p><a href="<?= Backend::url('fiddy/site/addresses') ?>" class="btn btn-default">Return to addresses list</a></p>
 
 <?php endif ?>
